--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,30 +17,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      
 
-      # 构建并推送后端镜像
-      - name: Build and push backend image
+      # 构建后端镜像（仅测试构建，不推送）
+      - name: Build backend image
         uses: docker/build-push-action@v4
         with:
           context: ./backend
-          push: ${{ github.event_name == 'push' }}
-          tags: ghcr.io/${{ github.repository_owner }}/nas-monitor-backend:latest, ghcr.io/${{ github.repository_owner }}/nas-monitor-backend:${{ github.sha }}
+          push: false
+          tags: nas-monitor-backend:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # 构建并推送前端镜像
-      - name: Build and push frontend image
+      # 构建前端镜像（仅测试构建，不推送）
+      - name: Build frontend image
         uses: docker/build-push-action@v4
         with:
           context: ./frontend
-          push: ${{ github.event_name == 'push' }}
-          tags: ghcr.io/${{ github.repository_owner }}/nas-monitor-frontend:latest, ghcr.io/${{ github.repository_owner }}/nas-monitor-frontend:${{ github.sha }}
+          push: false
+          tags: nas-monitor-frontend:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
