--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,58 +1,104 @@
 name: Docker Build and Push
 
+# 触发条件：当代码推送到main分支或创建Pull Request到main分支时
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  # 手动触发选项
+  workflow_dispatch:
 
+# 工作流运行环境
 jobs:
-  build-and-push:
+  # 构建后端镜像的作业
+  build-backend:
+    name: Build and Push Backend Image
     runs-on: ubuntu-latest
+    permissions:
+      # 授予访问GitHub Container Registry的权限
+      contents: read
+      packages: write
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      # 检出代码
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      # 设置Docker Buildx，支持多平台构建
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      
-
-      # 构建后端镜像（仅测试构建，不推送）
-      - name: Build backend image
-        uses: docker/build-push-action@v4
+        uses: docker/setup-buildx-action@v3
+        
+      # 登录到GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+        
+      # 提取元数据（标签、标签等）
+      - name: Extract metadata for Docker
+        id: meta-backend
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/nas-monitor-backend
+          tags: |
+            latest
+        
+      # 构建并推送后端镜像
+      - name: Build and push Backend Docker image
+        uses: docker/build-push-action@v5
         with:
           context: ./backend
-          push: false
-          tags: nas-monitor-backend:latest
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-backend.outputs.tags }}
+          labels: ${{ steps.meta-backend.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # 构建前端镜像（仅测试构建，不推送）
-      - name: Build frontend image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./frontend
-          push: false
-          tags: nas-monitor-frontend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  deploy:
-    needs: build-and-push
+  # 构建前端镜像的作业
+  build-frontend:
+    name: Build and Push Frontend Image
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    permissions:
+      # 授予访问GitHub Container Registry的权限
+      contents: read
+      packages: write
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Compose
-        uses: docker/setup-compose@v2
-
-      - name: Deploy to server
-        run: |
-          # 这里可以添加部署到服务器的命令
-          # 例如使用 ssh 连接到服务器并执行 docker-compose up -d
-          echo "Deploying to server..."
+      # 检出代码
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      # 设置Docker Buildx，支持多平台构建
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      # 登录到GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+        
+      # 提取元数据（标签、标签等）
+      - name: Extract metadata for Docker
+        id: meta-frontend
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/nas-monitor-frontend
+          tags: |
+            latest
+        
+      # 构建并推送前端镜像
+      - name: Build and push Frontend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-frontend.outputs.tags }}
+          labels: ${{ steps.meta-frontend.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
