--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,19 @@ services:
     environment:
       - TZ=Asia/Shanghai
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8017/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   frontend:
     image: ghcr.io/aqiyoung/nas-monitor-frontend:latest
     ports:
       - "3003:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     environment:
       - TZ=Asia/Shanghai
     restart: unless-stopped
