--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,19 +1,34 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;  # 处理所有域名请求
 
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+        # 添加一些常用的响应头
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
     }
 
     location /api {
         proxy_pass http://backend:8017;
         proxy_http_version 1.1;
+        proxy_set_header Host backend:8017;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        
+        # 确保正确传递请求方法
+        proxy_pass_request_headers on;
+        
+        # 增加超时时间，处理长时间运行的请求
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 }
