--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,11 @@ services:
       - TZ=Asia/Shanghai
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8017/"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8017/ || exit 1"]
       interval: 30s
-      timeout: 10s
-      retries: 3
+      timeout: 60s
+      retries: 10
+      start_period: 120s
 
   frontend:
     image: ghcr.io/aqiyoung/nas-monitor-frontend:latest
