--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,13 @@ services:
     environment:
       - TZ=Asia/Shanghai
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8017/ || exit 1"]
-      interval: 30s
-      timeout: 60s
-      retries: 10
-      start_period: 120s
+    # 暂时禁用健康检查，以便容器能够启动
+    # healthcheck:
+    #   test: ["CMD-SHELL", "wget -qO- http://localhost:8017/health || exit 1"]
+    #   interval: 30s
+    #   timeout: 60s
+    #   retries: 10
+    #   start_period: 180s
 
   frontend:
     image: ghcr.io/aqiyoung/nas-monitor-frontend:latest
@@ -23,8 +24,7 @@ services:
     volumes:
       - ./frontend:/usr/share/nginx/html  # 挂载当前目录下的frontend到容器内的nginx目录
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     environment:
       - TZ=Asia/Shanghai
     restart: unless-stopped
