--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,11 @@ services:
       - "3003:80"
     volumes:
       - ./frontend:/usr/share/nginx/html  # 挂载当前目录下的frontend到容器内的nginx目录
+    working_dir: /usr/share/nginx/html  # 明确指定工作目录
     depends_on:
       - backend
     environment:
       - TZ=Asia/Shanghai
     restart: unless-stopped
+    # 确保容器能够访问挂载的文件
+    user: "1000:1000"  # 使用与主机相同的用户ID和组ID
