--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,9 +7,25 @@ server {
     add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
     add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization' always;
 
+    # 确保nginx以正确的用户运行
+    user root;
+
+    # 主目录配置
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    # 确保目录存在
+    if (!-d /usr/share/nginx/html) {
+        return 500 "Directory not found: /usr/share/nginx/html";
+    }
+
+    # 确保index.html存在
+    if (!-f /usr/share/nginx/html/index.html) {
+        return 500 "File not found: /usr/share/nginx/html/index.html";
+    }
+
+    # 主页面配置
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
         # 添加一些常用的响应头
         add_header X-Frame-Options SAMEORIGIN always;
@@ -17,6 +33,14 @@ server {
         add_header X-XSS-Protection "1; mode=block" always;
     }
 
+    # 处理静态资源
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000";
+        try_files $uri =404;
+    }
+
+    # API代理配置
     location /api {
         proxy_pass http://backend:8017;
         proxy_http_version 1.1;
@@ -51,4 +75,16 @@ server {
             return 204;
         }
     }
+
+    # 404错误处理
+    error_page 404 /index.html;
+    # 500错误处理
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
+    # 日志配置
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log debug;
 }
