--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,19 @@
-# Node.js dependencies
+# 依赖目录
 node_modules/
+.pnp
+.pnp.js
 
-# Build outputs
+# 测试覆盖率
+coverage/
+*.lcov
+.nyc_output
+
+# 构建产物
 dist/
 build/
+*.tsbuildinfo
 
-# Python cache
-__pycache__/
-*.pyc
-*.pyo
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Logs
-logs/
+# 日志文件
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -35,7 +21,50 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Package manager
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# 环境变量文件
+.env
+.env.local
+.env.*.local
+
+# 编辑器目录和文件
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Python相关
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Docker相关
+.dockerignore
+
+# 后端数据目录
+backend/data/
