--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
       - "8017:8017"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock  # 用于访问 Docker 守护进程
-      - ./backend:/app  # 挂载当前目录下的backend到容器内的/app
       - ./backend/data:/app/data  # 单独挂载数据目录，确保用户数据持久化
     working_dir: /app  # 明确指定工作目录
     environment:
@@ -14,8 +13,8 @@ services:
     # 明确禁用健康检查，确保容器能够启动
     healthcheck:
       disable: true
-    # 使用绝对路径指定main.py文件
-    command: uvicorn /app/main:app --host 0.0.0.0 --port 8017 --reload
+    # 使用镜像内置的启动命令，不使用--reload参数
+    command: uvicorn main:app --host 0.0.0.0 --port 8017
 
   frontend:
     image: ghcr.io/aqiyoung/nas-monitor-frontend:latest
