--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
       - "8017:8017"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock  # 用于访问 Docker 守护进程
+      - /proc:/proc:ro  # 用于获取宿主机系统信息
+      - /sys:/sys:ro  # 用于获取宿主机硬件信息
+      - /etc/os-release:/etc/os-release:ro  # 用于获取宿主机OS版本信息
       - ./backend/data:/app/data  # 单独挂载数据目录，确保用户数据持久化
     working_dir: /app  # 明确指定工作目录
     environment:
