--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,7 +29,7 @@ server {
 
     # API代理配置
     location /api {
-        proxy_pass ${API_BASE_URL:-http://backend:8017};
+        proxy_pass http://backend:8017;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
