--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,104 +1,104 @@
-name: Docker Build and Push
-
-# 触发条件：当代码推送到main分支或创建Pull Request到main分支时
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  # 手动触发选项
-  workflow_dispatch:
-
-# 工作流运行环境
-jobs:
-  # 构建后端镜像的作业
-  build-backend:
-    name: Build and Push Backend Image
-    runs-on: ubuntu-latest
-    permissions:
-      # 授予访问GitHub Container Registry的权限
-      contents: read
-      packages: write
-    
-    steps:
-      # 检出代码
-      - name: Checkout repository
-        uses: actions/checkout@v4
+name: Docker Build and Push 
+ 
+# 触发条件：当代码推送到main分支或创建Pull Request到main分支时 
+on: 
+  push: 
+    branches: [ main ] 
+  pull_request: 
+    branches: [ main ] 
+  # 手动触发选项 
+  workflow_dispatch: 
+ 
+# 工作流运行环境 
+jobs: 
+  # 构建后端镜像的作业 
+  build-backend: 
+    name: Build and Push Backend Image 
+    runs-on: ubuntu-latest 
+    permissions: 
+      # 授予访问GitHub Container Registry的权限 
+      contents: read 
+      packages: write 
+     
+    steps: 
+      # 检出代码 
+      - name: Checkout repository 
+        uses: actions/checkout@v4 
         
-      # 设置Docker Buildx，支持多平台构建
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # 设置Docker Buildx，支持多平台构建 
+      - name: Set up Docker Buildx 
+        uses: docker/setup-buildx-action@v3 
         
-      # 登录到GitHub Container Registry
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # 登录到GitHub Container Registry 
+      - name: Log in to GitHub Container Registry 
+        uses: docker/login-action@v3 
+        with: 
+          registry: ghcr.io 
+          username: ${{ github.repository_owner }} 
+          password: ${{ secrets.GITHUB_TOKEN }} 
         
-      # 提取元数据（标签、标签等）
-      - name: Extract metadata for Docker
-        id: meta-backend
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/nas-monitor-backend
-          tags: |
-            latest
+      # 提取元数据（标签、标签等） 
+      - name: Extract metadata for Docker 
+        id: meta-backend 
+        uses: docker/metadata-action@v5 
+        with: 
+          images: ghcr.io/${{ github.repository_owner }}/nas-monitor-backend 
+          tags: | 
+            latest 
         
-      # 构建并推送后端镜像
-      - name: Build and push Backend Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-backend.outputs.tags }}
-          labels: ${{ steps.meta-backend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # 构建前端镜像的作业
-  build-frontend:
-    name: Build and Push Frontend Image
-    runs-on: ubuntu-latest
-    permissions:
-      # 授予访问GitHub Container Registry的权限
-      contents: read
-      packages: write
-    
-    steps:
-      # 检出代码
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # 构建并推送后端镜像 
+      - name: Build and push Backend Docker image 
+        uses: docker/build-push-action@v5 
+        with: 
+          context: ./backend 
+          push: ${{ github.event_name != 'pull_request' }} 
+          tags: ${{ steps.meta-backend.outputs.tags }} 
+          labels: ${{ steps.meta-backend.outputs.labels }} 
+          cache-from: type=gha 
+          cache-to: type=gha,mode=max 
+ 
+  # 构建前端镜像的作业 
+  build-frontend: 
+    name: Build and Push Frontend Image 
+    runs-on: ubuntu-latest 
+    permissions: 
+      # 授予访问GitHub Container Registry的权限 
+      contents: read 
+      packages: write 
+     
+    steps: 
+      # 检出代码 
+      - name: Checkout repository 
+        uses: actions/checkout@v4 
         
-      # 设置Docker Buildx，支持多平台构建
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # 设置Docker Buildx，支持多平台构建 
+      - name: Set up Docker Buildx 
+        uses: docker/setup-buildx-action@v3 
         
-      # 登录到GitHub Container Registry
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # 登录到GitHub Container Registry 
+      - name: Log in to GitHub Container Registry 
+        uses: docker/login-action@v3 
+        with: 
+          registry: ghcr.io 
+          username: ${{ github.repository_owner }} 
+          password: ${{ secrets.GITHUB_TOKEN }} 
         
-      # 提取元数据（标签、标签等）
-      - name: Extract metadata for Docker
-        id: meta-frontend
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/nas-monitor-frontend
-          tags: |
-            latest
+      # 提取元数据（标签、标签等） 
+      - name: Extract metadata for Docker 
+        id: meta-frontend 
+        uses: docker/metadata-action@v5 
+        with: 
+          images: ghcr.io/${{ github.repository_owner }}/nas-monitor-frontend 
+          tags: | 
+            latest 
         
-      # 构建并推送前端镜像
-      - name: Build and push Frontend Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-frontend.outputs.tags }}
-          labels: ${{ steps.meta-frontend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      # 构建并推送前端镜像 
+      - name: Build and push Frontend Docker image 
+        uses: docker/build-push-action@v5 
+        with: 
+          context: ./frontend-vue  # 修改为正确的前端目录 
+          push: ${{ github.event_name != 'pull_request' }} 
+          tags: ${{ steps.meta-frontend.outputs.tags }} 
+          labels: ${{ steps.meta-frontend.outputs.labels }} 
+          cache-from: type=gha 
+          cache-to: type=gha,mode=max 
