修复Docker镜像拉取：将cAdvisor镜像源从gcr.io改为zcube/cadvisor，解决网络连接问题

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
 
   # cAdvisor（容器监控）
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:latest
+    image: zcube/cadvisor:latest
     container_name: nas-cadvisor
     network_mode: host
     volumes:
