修复构建路径：将前端构建上下文从./frontend-vue改为./frontend，确保构建环境能找到正确的前端代码目录

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   # 前端Vue应用
   frontend:
     build:
-      context: ./frontend-vue
+      context: ./frontend
       dockerfile: Dockerfile
     container_name: nas-monitor-frontend
     ports:
