--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -92,13 +92,13 @@ jobs:
           tags: | 
             latest 
         
-      # 构建并推送前端镜像 
-      - name: Build and push Frontend Docker image 
-        uses: docker/build-push-action@v5 
-        with: 
-          context: ./frontend-vue  # 修改为正确的前端目录 
-          push: ${{ github.event_name != 'pull_request' }} 
-          tags: ${{ steps.meta-frontend.outputs.tags }} 
-          labels: ${{ steps.meta-frontend.outputs.labels }} 
-          cache-from: type=gha 
+      # 构建并推送前端镜像
+      - name: Build and push Frontend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend  # 修改为正确的前端目录
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-frontend.outputs.tags }}
+          labels: ${{ steps.meta-frontend.outputs.labels }}
+          cache-from: type=gha
           cache-to: type=gha,mode=max 
