--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   # 后端FastAPI服务
   backend:
@@ -75,6 +73,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: nas-prometheus
+    user: "root"
     ports:
       - 9090:9090
     volumes:
